Fix pop message spacing and move id

--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -77,7 +77,7 @@
       @media ($screen-smalltablet) {
         font-size: 14px;
         line-height: 20px;
-        padding: 15px 15px 10px 15px;
+        padding: 0 15px 15px 15px;
       }
     }
 
